@@ -4,6 +4,7 @@ next version - not yet released
  NEW    : Support for BluRay chapters
  NEW    : Ticket #1216, Added a "Clear" option to the playlist context menu
  NEW    : Ticket #1224, Added OSD messages when changing the audio boost and the audio balance
+ NEW    : Ticket #1350, Added a time tooltip for the seek bar
  CHANGED: The filters' settings are now saved in
           [HKCU\Software\Gabest\Media Player Classic\Filters]
  CHANGED: Updated libpng to v1.5.2
